force-app/main/default/objects/Membership_Contact_Role__c/Membership_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Can represent the Members themselves that belong to a membership OR anyone involved with the Membership, using picklist values and other fields to define the role.</description>
    <label>Membership Contact Role</label>
    <nameField>
        <label>Membership Contact Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>