force-app/main/default/objects/Membership_Contact_Role__c/fields/Does_Not_Expire__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Contact's Membership does not expire. Defaults to the expiry setting on the Membership.</inlineHelpText>
    <label>Does Not Expire</label>
    <type>Checkbox</type>
</CustomField>