force-app/main/default/objects/Membership_Contact_Role__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Membership Contact is the primary point person for the Membership</description>
    <inlineHelpText>This Membership Contact is the primary point person for the Membership</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>