force-app/main/default/objects/Membership_Contact_Role__c/fields/Membership_Category_formula__c.field-meta.xml
<CustomField>
    <fullName>Membership_Category_formula__c</fullName>
    <formula>TEXT(Membership__r.Product__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Category (formula)</label>
    <type>Text</type>
</CustomField>