force-app/main/default/objects/Membership_Contact_Role__c/fields/Membership_Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status_formula__c</fullName>
    <formula>TEXT(Membership__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Status (formula)</label>
    <type>Text</type>
</CustomField>