force-app/main/default/objects/Membership_Contact_Role__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The Type of Membership this Contact has</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Type</valueSetName>
    </valueSet>
</CustomField>